<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Recursos existentes -->
    <string name="app_name" translatable="false">Casa Locurita</string>
    <string name="room_icon_description">Icono de la habitación</string>
    <string name="room_name">Habitación A%1$d%2$dB%3$d%4$d</string>
    <string name="room_description">Descripción de la habitación</string>
    <string name="room_solved">Habitación resuelta</string>
    <string name="answer_hint">Escribe tu respuesta aquí</string>
    <string name="submit_button_text">Enviar respuesta</string>
    <string name="button_north" translatable="false">⬆️</string>
    <string name="button_west" translatable="false">⬅️</string>
    <string name="button_east" translatable="false">➡️</string>
    <string name="button_south" translatable="false">⬇️</string>
    <string name="candy">Caramelo de la victoria</string>
    <string name="winner_message">¡Felicidades, has ganado!</string>
    <string name="restart_game">Reiniciar juego</string>
    <string name="riddles_solved">Acertijos resueltos:</string>
    <string name="wrong_tries">Intentos fallidos:</string>
    <string name="visited_rooms">Salas visitadas:</string>
    <string name="time">Tiempo empleado:</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Iniciar sesión</string>
    <string name="app_logo">Logo de Casa Locurita</string>
    <string name="best_stats_title">Mejores estadísticas</string>
    <string name="seconds">segundos</string>
    <string name="best_riddles_solved">Mejores acertijos:</string>
    <string name="best_failed_attempts">Mejores fallos:</string>
    <string name="best_rooms_visited">Mejores salas:</string>
    <string name="best_time">Mejor tiempo:</string>

</resources>

