<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <!-- Icono de la habitación -->
    <ImageView
        android:id="@+id/roomIcon"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/question_mark"
        android:contentDescription="@string/room_icon_description" />

    <!-- Descripción de la habitación -->
    <TextView
        android:id="@+id/roomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/room_name"
        android:text="@string/room_name"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/roomDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/room_description"
        android:text="@string/room_description"
        android:textAlignment="center"
        android:textSize="24sp" />

    <!-- Campo de entrada para la respuesta -->

    <EditText
        android:id="@+id/answerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/answer_hint"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="24sp" />

    <!-- Botón para enviar la respuesta -->
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit_button_text"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonNorth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:text="@string/button_north"
                android:textColorLink="#E20000"
                android:textSize="60sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonWest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:text="@string/button_west"
                android:textSize="60sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonEast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:text="@string/button_east"
                android:textSize="60sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonSouth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:text="@string/button_south"
                android:textSize="60sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <!-- Contenedor de botones de navegación (Norte, Oeste, Este, Sur) -->

</LinearLayout>
